--- a/index.html
+++ b/index.html
@@ -218,126 +218,129 @@
       </section>
       <!--Un paquete para ti-->
       <section class="container py-5 seccion2" style="text-align: center;">
-        <h2>UN PAQUETE PARA TI</h2>
-        <div class="row">
-          <!--Fotografía publicitaria-->
-          <div class="col-lg-4">
-            <img src="img/paquetes/Foto-Publi-libro.png" alt="Paquete infantil" width="100%">
-            <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalFP">
-             Ver más
-            </button>
-          </div>
-            <!--modal 1-->
-          <div class="modal fade" id="modalFP" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                 <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title seccion2" id="exampleModalLabel" style="text-align: center;">Fotografía publicitaria</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                 </div>
-              <div class="modal-body seccion2">
-                <!--precios-->
-                <div class="conatiner">
-                  <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-9">
-                      <h1>$2,750</h1>
-                      <br>
-                      <p style="text-align: justify;">
-                        Este es mi paquete comunmente más solicitado.
-                        <br>
-                        Se tiene una sesión de 2 horas en el establecimiento o 
-                        locación y se entregan un total de <u>60 fotografías digitales optimizadas para redes sociales</u>
-                        con licencia comercial  y se entregan en un plazo de 3 a 10 días hábiles.        
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          <div class="modal-footer">
-          <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-          </div>
-          </div>
-          </div>
-          <!--Fotografía social-->
-          <div class="col-lg-4">
-            <img src="img/paquetes/Foto-social-libro.png" alt="Paquete infantil" width="100%">
-            <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalFS">
-             Ver más
-            </button>
-          </div>
-            <!--modal 2-->
-          <div class="modal fade" id="modalFS" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                 <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Fotografía social</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                 </div>
-              <div class="modal-body">
-                <!--precios-->
-                <div class="conatiner">
-                  <div class="row justify-content-center align-items-center">
-                    <div class="col-lg-9">
-                      <h1>$1,750</h1>
-                      <br>
-                      <p style="text-align: justify;">
-                        Este es mi paquete es para quienes buscan fotos de uso personal.
-                        <br>
-                        Se tiene una sesión de 45 minutos en la locación y se entregan 
-                        una selección de las mejores fotos con un minimo de <u>45 fotografías digitales optimizadas
-                        para redes sociales</u> con licencia de uso personal y se entregan en un plazo de 3 a 10 días hábiles.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          <div class="modal-footer">
-          <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
-          </div>
-          </div>
-          </div>
-          </div>
-          <!--Fotografía de estudio-->
-          <div class="col-lg-4">
-            <img src="img/paquetes/Foto-estudio-libro.png" alt="Paquete infantil" width="100%">
-            <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRS">
-             Ver más
-            </button>
-          </div>
-            <!--modal 3-->
-          <div class="modal fade" id="modalRS" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                 <div class="modal-content">
-                    <div class="modal-header">
-                    <h5 class="modal-title seccion2" id="exampleModalLabel">Fotografía de estudio</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                 </div>
-              <div class="modal-body">
-               <!--precios-->
-               <div class="conatiner">
-                <div class="row justify-content-center align-items-center seccion2">
+      <h2>UN PAQUETE PARA TI</h2>
+      <div class="row">
+        <!--Fotografía publicitaria-->
+        <div class="col-lg-4">
+          <img src="img/paquetes/Foto-Publi-libro.png" alt="Paquete infantil" width="100%">
+          <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalFP">
+           Ver más
+          </button>
+        </div>
+          <!--modal 1-->
+        <div class="modal fade" id="modalFP" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title seccion2" id="exampleModalLabel" style="text-align: center;">Fotografía publicitaria</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+            <div class="modal-body seccion2">
+              <!--precios-->
+              <div class="conatiner">
+                <div class="row justify-content-center align-items-center">
                   <div class="col-lg-9">
-                    <h1>$350 c/u</h1>
+                    <h1>$2,750</h1>
                     <br>
                     <p style="text-align: justify;">
-                     Se realiza una sesión de fotos en un espacio cerrado
-                     con luz artificia y las fotos se seleccionan de manera
-                     individual  se entrregan en <u>alta resolucion y opyimizadas para redes sociales</u>
-                     estas fotografías se pueden imprimir en cualquier tamaño y ser utilizdas 
-                     con licencia unicamente de uso personal.
+                      Este es mi paquete comunmente más solicitado.
+                      <br>
+                      Se tiene una sesión de 2 horas en el establecimiento o 
+                      locación y se entregan un total de <u>60 fotografías digitales optimizadas para redes sociales</u>
+                      con licencia comercial  y se entregan en un plazo de 3 a 10 días hábiles.        
                     </p>
                   </div>
                 </div>
               </div>
             </div>
-          <div class="modal-footer">
-          <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+            <br>
+        <div class="aling-items-center pb-5">
+        <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank" class="boton">Escribeme a wahtasapp</a>
+        </div>
+        </div>
+        </div>
+        </div>
+        <!--Fotografía social-->
+        <div class="col-lg-4">
+          <img src="img/paquetes/Foto-social-libro.png" alt="Paquete infantil" width="100%">
+          <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalFS">
+           Ver más
+          </button>
+        </div>
+          <!--modal 2-->
+        <div class="modal fade" id="modalFS" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Fotografía social</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+            <div class="modal-body">
+              <!--precios-->
+              <div class="conatiner">
+                <div class="row justify-content-center align-items-center">
+                  <div class="col-lg-9">
+                    <h1>$1,750</h1>
+                    <br>
+                    <p style="text-align: justify;">
+                      Este es mi paquete es para quienes buscan fotos de uso personal.
+                      <br>
+                      Se tiene una sesión de 45 minutos en la locación y se entregan 
+                      una selección de las mejores fotos con un minimo de <u>45 fotografías digitales optimizadas
+                      para redes sociales</u> con licencia de uso personal y se entregan en un plazo de 3 a 10 días hábiles.
+                    </p>
+                  </div>
+                </div>
+              </div>
           </div>
-          </div>
-          </div>
+          <br>
+          <div class="aling-items-center pb-5">
+          <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank" class="boton">Escribeme a wahtasapp</a>
           </div>
         </div>
+        </div>
+        </div>
+        <!--Fotografía de estudio-->
+        <div class="col-lg-4">
+          <img src="img/paquetes/Foto-estudio-libro.png" alt="Paquete infantil" width="100%">
+          <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRS">
+           Ver más
+          </button>
+        </div>
+          <!--modal 3-->
+        <div class="modal fade" id="modalRS" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title seccion2" id="exampleModalLabel">Fotografía de estudio</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+            <div class="modal-body">
+             <!--precios-->
+             <div class="conatiner">
+              <div class="row justify-content-center align-items-center seccion2">
+                <div class="col-lg-9">
+                  <h1>$350 c/u</h1>
+                  <br>
+                  <p style="text-align: justify;">
+                   Se realiza una sesión de fotos en un espacio cerrado
+                   con luz artificia y las fotos se seleccionan de manera
+                   individual  se entrregan en <u>alta resolucion y opyimizadas para redes sociales</u>
+                   estas fotografías se pueden imprimir en cualquier tamaño y ser utilizdas 
+                   con licencia unicamente de uso personal.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <br>
+          <div class="aling-items-center pb-5">
+          <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank" class="boton">Escribeme a wahtasapp</a>
+          </div>
+        </div>
+        </div>
+        </div>
+      </div>
       </section>
     </main>
 
@@ -367,7 +370,7 @@
            </div>
     
             <div class="col-lg-4 d-flex justify-content-around align-self-center" style="font-size: 3rem;">
-            <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank"><i class="fa-brands fa-whatsapp"></i>
+            <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/cristipb_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             </div>
