--- a/servicios.html
+++ b/servicios.html
@@ -100,8 +100,9 @@
                 </div>
               </div>
             </div>
-        <div class="modal-footer">
-        <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+            <br>
+        <div class="aling-items-center pb-5">
+        <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank" class="boton">Escribeme a wahtasapp</a>
         </div>
         </div>
         </div>
@@ -139,9 +140,10 @@
                 </div>
               </div>
           </div>
-        <div class="modal-footer">
-        <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
-        </div>
+          <br>
+          <div class="aling-items-center pb-5">
+          <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank" class="boton">Escribeme a wahtasapp</a>
+          </div>
         </div>
         </div>
         </div>
@@ -178,9 +180,10 @@
               </div>
             </div>
           </div>
-        <div class="modal-footer">
-        <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
-        </div>
+          <br>
+          <div class="aling-items-center pb-5">
+          <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank" class="boton">Escribeme a wahtasapp</a>
+          </div>
         </div>
         </div>
         </div>
@@ -288,7 +291,7 @@
          </div>
   
           <div class="col-lg-4 d-flex justify-content-around align-self-center" style="font-size: 3rem;">
-          <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank"><i class="fa-brands fa-whatsapp"></i>
+          <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
           <a href="https://www.instagram.com/cristipb_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-twitter"></i></a>
           </div>
