--- a/galeria.html
+++ b/galeria.html
@@ -451,13 +451,13 @@
           <div class="col-lg-4 d-flex justify-content-around align-self-center" style="font-size: 3rem;">
           <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
           <a href="https://www.instagram.com/cristipb_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
           </div>
   
        </div>
        
     </div>
-    <h6 class="footer1 py-2"><a href="mailto:crispispics@hotmail.com">CRIS</a> | 2024</h6>
+    <h6 class="footer1 py-2"><a href="mailto:crispispics@hotmail.com">CRIS</a> | 2025</h6>
   </footer>
 
 <!--Boostrap-->
