--- a/proyectos.html
+++ b/proyectos.html
@@ -63,6 +63,95 @@
     <div class="container-fluid seccion1 py-5 my-4">
       <img src="img/index/fondo4.jpg" width="100%">
     </div>
+    <!--Poe un viaje de poesia misterio y terror-->
+    <section class="container sesccion2 py-5" style="text-align: center;">
+      <h2>POE</h2> 
+      <h6>UN VIAJE DE POESIA, MISTERIO Y TERROR</h6>
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-5">
+          <p class="seccion2" style="text-align: justify;">
+           Para este proyecto se realizaron distintos materiales
+           multimedia, entre los entregables se encuentran:
+          <br>
+          <br>
+          - Cartel promocional (optimizado para redes sociales)
+          <br>
+          - Cartel promocional (optimizado para impresión)
+          <br>
+          - Boleto en tamaño para impresión 
+          <br>
+          - Programa de mano
+          <br>
+          - Fotografías del elenco y la puesta en escena
+          <br>
+          <br>
+          Todos estos elementos se realizaron completamente personalizados
+          con las tipografías, logos y/o elementos necesarios e importantes para 
+          el grupo organizador que realizo la puesta en escena. 
+          </p>
+        </div>
+        <div class="col-lg-5">
+        <img src="img/Proyectos/Poe/Proyecto_1.jpg" alt="Entregables completo" width="100%">  
+        </div>
+      </div>
+      <!--carrusel-->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-5">
+          <p class="seccion2" style="text-align: justify;">
+          1. Todo se entrego para la facilidad de mi cliente,
+          por ejemplo, se acordó que los programas de mano serían
+          unicamente de 1 hoja doblada, de manera que con solo imprimir
+          por las dos caras ya estaría listo  para la distribución entre
+          el público.
+          <br>
+          <br>
+          2. Los boletos tienen el mismo estilo y elementos que el
+          cartel publicitario, pero a estos se les añadio marcas de corte,
+          así una vez aprobado el diseño final, se entrego un documento 
+          tamaño tabloide con las marcas de corte para facilitar el corte de los mismos.
+          <br>
+          <br>
+          3. En el paquete personalizado, se acordó tener 2 sesiones fotográficas, una que serían
+          fotografías "estandar" que servirian tanto para los acotres, así como eran necesarias
+          para el contenido del programa de mano, y la segunda sesión sería en el ensayo general
+          para que  el grupo tuviera imagenes de stock para publicidad.
+          </p>
+        </div>
+        <div class="col-lg-5">
+          <div id="carouselExampleControlsNoTouching" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/Proyectos/Poe/Proyecto-4.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Poe/Proyecto-2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Poe/Proyecto-3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Poe/Proyecto-5.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Poe/Proyecto-6.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Poe/Proyecto-7.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </section>
     <!--proyecto de max--> 
     <section class="container seccion2 py-5" style="text-align: center;">
       <h2>
@@ -388,13 +477,13 @@
             <div class="col-lg-4 d-flex justify-content-around align-self-center" style="font-size: 3rem;">
             <a href="https://wa.me/message/7DTW37ROZJ5CP1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/cristipb_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
     
          </div>
          
       </div>
-      <h6 class="footer1 py-2"><a href="mailto:crispispics@hotmail.com">CRIS</a> | 2024</h6>
+      <h6 class="footer1 py-2"><a href="mailto:crispispics@hotmail.com">CRIS</a> | 2025</h6>
     </footer>
   
   <!--Boostrap-->
