--- a/proyectos.html
+++ b/proyectos.html
@@ -152,118 +152,95 @@
       </div>
 
     </section>
-    <!--proyecto de max--> 
-    <section class="container seccion2 py-5" style="text-align: center;">
-      <h2>
-        PERDERSE EN UN LUGAR CONOCIDO
-      </h2>
-      <div class="row justify-content-center py-3">
-        <div class="col-lg-8 col-md-4 col-sm-4">
-          <p style="text-align: justify;">
-            Hace un tiempo para la materia de "temas selectos de artes digitales" con la Dra. Natalia Gurieva,
-            realicé este proyecto, para que sepas de que se trata, aquí te platico un  poco más al respecto.
+    <!--Fotomontaje Marco Mar-->
+    <section class="container sesccion2 py-5" style="text-align: center;">
+      <h2>FOTOMONTAJE PROFESIONAL PARA DISEÑO DE CALZADO</h2> 
+      <div class="row align-items-center justify-content-center pt-4">
+        <div class="col-lg-5">
+          <p class="seccion2" style="text-align: justify;"> 
+            En este proyecto, transformé la imagen base de un zapato, 
+            combinándola con diseños gráficos que se me proporcionaron en plastas de color, 
+            para crear un montaje mas realista para poder visualizar el diseño final.
+            El resultado permitió presentar el producto de manera atractiva y profesional,
+            ideal para presentaciones o catálogos. Los entregables acordados fueron: 
+          <br>
+          <br>
+          - Montajes individuales de cada diseño (3 vistas c/u).
+          <br>
+          - Compilación completa en una sola imagen por diseño.
+          <br> 
+          <br>
+          Todos los elementos fueron elaborados de manera completamente personalizada, 
+          incorporando los diseños, colores y detalles específicos necesarios para representar 
+          fielmente la esencia del calzado y cumplir con los requerimientos del cliente.
           </p>
         </div>
-      </div>
-      <div class="row justify-content-center align-items-center py-3">
-        <div class="col-lg-4 col-md-4 col-sm-2">
-          <img src="img/Proyectos/Max/paleta de colores.JPG" alt="Paleta de colores" width="100%">
+        <div class="col-lg-5">
+        <img src="img/Proyectos/Fotomontaje zapatos/Zapato_ref.jpg" alt="Entregables completo" width="100%">  
         </div>
+      </div>
+      <!--carrusel-->
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-5">
+          <p class="seccion2" style="text-align: justify;">
+          Se hizo un tratamiento a la Imagen base, para mejorar resolución, 
+          y los detalles de la textura, igualmente a cada imagen se le hcieron
+          los siguientes ajustes de manera individual: 
+          <br>
+          <br>
+          - Corrección de iluminación y detalles para lograr un acabado profesional.
+          <br>
+          - Fotomontaje del mapa de trabajo, integrando los diseños en la imagen base.
+          <br>
+          - Tratamiento de luces y texturas para fusionar de forma natural ambas imágenes.
+          <br>
+          - Ajuste del logotipo con una perspectiva estimada para una visualización realista.
+          <br>
+          - Tratamiento adicional para mejorar la definición general de la imagen, resaltando su calidad final.
+          </p>
+        </div>
+        <div class="col-lg-5">
+          <div id="carouselExampleControlsNoTouching2" class="carousel carousel-dark slide" data-bs-touch="false" data-bs-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/Proyectos/Fotomontaje zapatos/Rojo_1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Rojo_1.1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Rojo_2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Rojo_2.2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Amarillo_1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Amarillo_1.2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Amarillo_2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Proyectos/Fotomontaje zapatos/Amarillo_2.2.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching2" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching2" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
 
-      <div class="row justify-content-center align-items-center py-3">
-        <div class="col-lg-9 col-md-4 col-sm-4">
-          <p style="text-align: justify;">
-            La paleta de color, la cree en base a los acordes cromáticos de Eva Geller auque,
-             ella describe una infinidad de combinaciones, ninguno me servia de una manera concreta, 
-             asi que en base a su teoria yo cree el mio que me  funcionara de una manera óptima.
-             <br>
-             <br>
-             Para empezar, hablaré un poco del azul y el negro, el azul por si solo puedeser interpretado
-              como pasividad, frialdad  y o espiritualidad y el negro, es lo duro, pero al juntar estos
-              colores, se crea en la mente el concpeto de "lo inmenso".
-              <br>
-              <br>
-              En cuanto al rojo, por si mismo es lo cálido y cercano, pero al combinarlo con el negro, 
-              se vuelve "lo agresivo, lo brutal",  el blanco con el gris, nos dan paso a lo inseguro y
-              lo noble, por ultimo el rosa, es y sera aunque se combine, "lo delicado".
-              <br>
-              <br>
-              Una ves estos conceptos en mente, al combinarlos, tenemos "la brutalidad de lo inmenso contra 
-              lo delicado" un acorde creomatico que nos habla de como algo inocente y noble puede ser 
-              aplastado por la inmensidad (de lo descococido en este caso).
-          </p>
-        </div>
-      </div>
-      <div class="row justify-content-center align-items-center py-3">
-      <div class="col-lg-9 col-md-5 col-sm-5">
-        <h2>CONTEXTO</h2>
-        <p style="text-align: justify;">
-             No recuerdo cuantos años tenía, pero era pequeña y estaba en la primaria, mi mamá siempre fue la
-             mamá que llega tarde y yo por consecuencia era la alumna que se quedaba hasta el final, en una ocasión
-             en particular (cabe aclarar, al ser de primaria, los papas nos tenían que recoger en el salón,
-             no en la escuela, para que así hubiera menos “riesgo”), mi mama no llegaba, se iban todos mis 
-             compañeros uno a uno y yo seguía sentada en el salón, me quede sola con la maestra, no recuerdo 
-             la hora, pero fácil habían pasado un par de horas cuando me dijo, cristina, me tengo que ir, 
-             ven te dejo con la coordinadora. 
-           <br>
-           <br>
-             Pase a estar con “Teti”, Teti me puso a dibujar, 
-             no dibuje nada, para ese entonces yo ya sabía leer un reloj con manecillas, y había uno 
-             en la oficina, ya eran las 3, y nada, mi mamá no aparecía, cuando llegaron las 3:30 
-             Teti me dijo que también tenía que irse, y que yo iba a tener que salir, era 
-             emocionante, porque afuera entrenaban los grandes, entonces ya no iba a estar tan sola, 
-             salí, y me dejaron con el  encargado de la puerta, ahí también había un reloj.
-            <br>
-            <br>
-            Fue lo peor que me pudo haber pasado, cada minuto que mi mamá no aparecía, yo me hacía mil y
-            un películas de todo lo que pudo haber pasado, los que entrenaban terminaron de entrenar y
-            poco a poco la escuela se fue vaciando, el reloj avanzaba y mamá no llegaba, dieron las 4 
-            y toda la escuela se quedó prácticamente vacía, pasaban los minutos y ya eran las 4:30 no
-            llegaba nadie, yo me sabía de memoria el teléfono de mi mamá, pero nadie me había querido
-            prestar su celular para intentar llamar, el que se apiado de mí, fue el guardia de la 
-            puerta, intentamos varias veces, pero la llamada sonaba y sonaba, pero nunca conecto,
-            para este puto yo ya  era más lagrimas que niña,  pasaron los minutos y el guardia me
-            hizo el favor de cruzarme por la calle para intentar llamar desde el teléfono de
-            la señora de la papelería de la esquina, tampoco funciono, pasaron los minutos y ya
-            no sabían que hacer conmigo, desarrolle una capacidad instantánea
-            para imaginar todo lo malo que me iba a pasar por el resto de mi vida, vi mis sueños 
-            caídos, me vi como vagabunda por no saber llegar a mi casa, vi cómo me corrían de la
-            escuela por no pagar la mensualidad, vi cómo me quedaba abandonada y sola en un callejo 
-            de por vida si es que vivía, vi como mi perro moría de hambre en el patio de la casa sin
-            poder defenderse del gato que seguramente también tenía hambre, los vi matarse entre sí,
-            los vi tirados en el piso, me vi sin ropa, comida, dinero o papás, me vi en la 
-            desesperación total. 
-            <br>
-            <br>
-            Llegaron las 6 de la tarde y no había nadie que abogara pos mi,
-            entonces, cuando llegaron las seis y media, se me ocurrió la mejor idea del momento, llamar 
-            a mi casa, mi papá llegaba de trabajar a las 6:30 y pensé, no se me su número, pero si el
-            de la casa, marcamos un par de veces y después de esperar unos minutos contesto mi papá, 
-            me escucho llorando y me dijo, ¿qué pasa, dónde estás? Y le dije que seguía en la escuela, 
-            que mi mamá no llegaba, le pregunté si estaba bien mi mama y me dijo que sí, que le marcó y
-            a él le dijo que estaba en el medico, no te muevas me dijo, voy por ti, los 30 minutos en
-            los que tardo en llagar por mí, fueron más que suficientes para sentirme no perdida, sino 
-            ignorada y abandonada por decisión propia de mi mamá; de temer por su vida y la mía, pasé 
-            a entender que nunca fui una prioridad para ella, no se molestó en levantar el teléfono, 
-            ni en marcar a la esuela para avisar... llegó mi papá y me llevo a la casa, 
-            cuando llego mi mamá lo único que me dijo fue “no sé porque te preocupas tanto”.
-        </p>
-      </div>
-      </div>
-      <div class="row justify-content-center py-3">
-        <div class="col-lg-5">
-          <img src="img/Proyectos/Max/retratoin2.jpg" alt="max2" width="100%">
-        </div>
-        <div class="col-lg-5">
-          <img src="img/Proyectos/Max/retratoin3.jpg" alt="max3" width="100%">
-        </div>
-      </div>
-      <div class="row justify-content-center py-3">
-        <div class="col-lg-5">
-          <img src="img/Proyectos/Max/retratoin1.jpg" alt="max1" width="100%">
-        </div>
-      </div>
     </section>
+    
     <!--Un paquete para ti-->
     <section class="container py-5 seccion2" style="text-align: center;">
       <h2>UN PAQUETE PARA TI</h2>
